--- a/styles/main.css
+++ b/styles/main.css
@@ -3,10 +3,29 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 }
+a:focus {
+	font-style: italic;
+}
+a:hover{
+	font-style: italic;
+}
 
 /* the styles for the header */
 header img {
 	float: left;
+}
+header h2 {
+	font-size: 170%;
+	text-indent: 30px;
+	color: #800;
+}
+header h3 {
+	font-size: 130%;
+	font-style: italic;
+	text-indent: 30px;
+}
+.shadow {
+	text-shadow: 2px 2px 6px #800;
 }
 
 /* the styles for the main content */
@@ -25,3 +44,6 @@ main h3 {
 }
 
 /* the styles for the footer */
+footer p {
+	text-align: center;
+}
