--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,7 @@
 /* the styles for the elements */
+:root{
+	--global-color-1:#800;
+}
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
@@ -17,7 +20,7 @@ header img {
 header h2 {
 	font-size: 170%;
 	text-indent: 30px;
-	color: #800;
+	color: var(--global-color-1);
 }
 header h3 {
 	font-size: 130%;
@@ -25,7 +28,7 @@ header h3 {
 	text-indent: 30px;
 }
 .shadow {
-	text-shadow: 2px 2px 6px #800;
+	text-shadow: 2px 2px 6px var(--global-color-1);
 }
 
 /* the styles for the main content */
